--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	<img src="./img/img01.png">
 </div>
 <div id="top">
-	로그인 | 회원가입 | <a href="about me.html">마이페이지</a> | 고객센터
+	로그인 | 회원가입 | <a href="./about me.html">마이페이지</a> | 고객센터
 </div>
 </header>
 <div class="clear"></div>
