--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <nav>
 	<ul>
 		<li> 감염병 </li>
-		<a href="file:///C:/Users/SMS/Desktop/%EC%9B%B9%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%EA%B8%B0%EC%B4%88/project/index_1.html"><li> 건강정보 </li></a>
+		<a href="./index_1.html"><li> 건강정보 </li></a>
 		<li> 정책정보 </li>
 		<li> 연구개발 </li>
 		<li> 알림·자료 </li>
