--- a/index_1.html
+++ b/index_1.html
@@ -92,10 +92,10 @@
 <body id="page">
 <header>
 <div id="logo">
-	<a href="file:///C:/Users/SMS/Desktop/%EC%9B%B9%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%EA%B8%B0%EC%B4%88/project/index.html"><img src="./img/img01.png"></a>
+	<a href="./index.html"><img src="./img/img01.png"></a>
 </div>
 <div id="top">
-	로그인 | 회원가입 | <a href="file:///C:/Users/SMS/Desktop/%EC%9B%B9%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%EA%B8%B0%EC%B4%88/project/about%20me.html">마이페이지</a> | 고객센터
+	로그인 | 회원가입 | <a href="./about me.html">마이페이지</a> | 고객센터
 </div>
 </header>
 <div class="clear"></div>
