--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		<li> <img src="./img/img10.png"> </li>
 	</ul>
 </section>
-<div class="clear"></div><hr size="1px"></div>
+<div class="clear"></div><div><hr size="1px"></div>
 <footer>
 <div id="address">
 	<img src="./img/img11.png">
